# SA

./: .gitignore  README.md  bashrc_commands.txt  cameraCalibration.txt  fastSlam.pptx  fastSlam.txt
aruco-env/: pyvenv.cfg
aruco-env/Scripts/: activate  activate.bat
arucoMarkers/: ArucoDetector.py  ArucoGenerator.py
calibration/: cameraCalibration.py  testCamera.py
catkin_ws/: camera_calibration.npz  camera_calibration_outro_grupo.npz
catkin_ws/devel/: .catkin  local_setup.fish  setup.fish  setup.sh
catkin_ws/devel/lib/pioneer_fast_slam/: aruco_slam.py  fast_slam.py  landmark.py  main.py  particle.py  utils.py
catkin_ws/devel/lib/pkgconfig/: pioneer_fast_slam.pc
catkin_ws/devel/lib/python3/dist-packages/pioneer_fast_slam/: __init__.py
catkin_ws/devel/share/pioneer_fast_slam/cmake/: pioneer_fast_slamConfig.cmake
catkin_ws/src/pioneer_fast_slam/: CMakeLists.txt  package.xml
catkin_ws/src/pioneer_fast_slam/launch/: aruco_slam.launch  record_data.launch
catkin_ws/src/pioneer_fast_slam/src/groundtruth/: simulation3.yaml  simulation_xo[].yaml  trajectory_[].yaml  trajectory_o.yaml  trajectory_x.yaml
catkin_ws/src/pioneer_fast_slam/src/launch/: aruco_slam.launch  record_data.launch
catkin_ws/src/pioneer_fast_slam/src/rosbag/: odometry1.bag  odometry2.bag  odometry3.bag
catkin_ws/src/pioneer_fast_slam/src/rviz/: slam.rviz
catkin_ws/src/pioneer_fast_slam/src/scripts/: aruco_slam.py  callbacks.py  fast_slam.py  ground_truth_markers.yaml  landmark.py  landmark_particle.py  list_groundtruth.py  main.py  metrics.py  particle.py  utils.py
microSimulation/: simulation.py
